--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,14 @@ body{
     grid-template-columns: repeat(3, 1fr); 
     gap: 16px;
 }
+
+.header-container{
+    display: flex; 
+    flex-direction: row;
+    justify-content: center;    
+}
+
+.header-images{
+    min-height: 150px;
+    min-width: auto;
+}
