--- a/src/components/Categories/Categories.css
+++ b/src/components/Categories/Categories.css
@@ -9,15 +9,18 @@
 }
 
 .category-container{
-    background-color: #737577;
     padding: 10px;
     margin-bottom: 10px;
     min-width: 200px;
-    border: 1px solid black;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    min-height: 60px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
 }
 
 .category-text{
-    color: aliceblue;
-    text-shadow: 2px 2px 3px #ffffff5b;
+    color: rgb(56, 56, 56);
+    text-shadow: 2px 2px 3px #0000005b;
 }
