Theme Change Attempt
Theme colors have been changed.

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -24,8 +24,7 @@
 .book {
   display: inline-block;
   width: 230px;
-
-  box-shadow: 0 0 20px #aaa;
+  background-color: #D3DAD9;
   margin: 25px;
   padding: 10px 10px 0 10px;
   vertical-align: top;
@@ -45,6 +44,7 @@
 .book p {
   margin-top: 12px;
   font-size: 20px;
+  color: #37353E;
 }
 
 .book .author {
