--- a/src/components/Categories/Categories.css
+++ b/src/components/Categories/Categories.css
@@ -10,6 +10,7 @@
 
 .category-container{
     padding: 10px;
+    background-color: #D3DAD9;
     margin-bottom: 10px;
     min-width: 200px;
     min-height: 60px;
